tests/errors/E017.zen
int main() {
    return add(4, true);  // E016: Argument type mismatch in call to function 'add'
}

int add(a: int, b: int) {
    return a + b;
}
